--- a/car_workshop/i18n/es.po
+++ b/car_workshop/i18n/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-09-03 10:21+0000\n"
-"PO-Revision-Date: 2018-09-03 12:39+0200\n"
+"PO-Revision-Date: 2018-09-03 12:44+0200\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -2150,7 +2150,7 @@ msgstr "Márgenes"
 #. module: car_workshop
 #: model:ir.ui.menu,name:car_workshop.car_masters_menus
 msgid "Masters"
-msgstr "Masters"
+msgstr "Maestros"
 
 #. module: sale
 #: model:sale.layout_category,name:sale.sale_layout_cat_2
